# AudioSeparationTool

./: .gitignore  CMakeLists.txt  CODE_REVIEW_POINTS.md  README.md  REVIEW_SUMMARY.md  TODO.md  addsoundfeaturewidget.cpp  addsoundfeaturewidget.h  asyncprocessor.cpp  asyncprocessor.h  audio_preprocess_utils.cpp  audio_preprocess_utils.h  audioplayer.cpp  audioplayer.h  audioserializer.cpp  audioserializer.h  constants.h  errorhandler.cpp  errorhandler.h  filelocker.cpp  filelocker.h  filemanagerwidget.cpp  filemanagerwidget.h  filerepo.cpp  filerepo.h  fileutils.cpp  fileutils.h  filewidget.cpp  filewidget.h  folderwidget.cpp  folderwidget.h  htsat_model_test.cpp  htsatprocessor.cpp  htsatprocessor.h  htsatworker.cpp  htsatworker.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  (+13 more)
.continue/rules/: new-rule.md
tests/: test_separationworker_integration.cpp
